@@ -30,7 +30,6 @@ import androidx.build.gitclient.getHeadShaProvider
 import androidx.build.gradle.isRoot
 import androidx.build.kythe.configureProjectForKzipTasks
 import androidx.build.license.addLicensesToPublishedArtifacts
-import androidx.build.resources.CopyPublicResourcesDirTask
 import androidx.build.resources.configurePublicResourcesStub
 import androidx.build.sbom.configureSbomPublishing
 import androidx.build.sbom.validateAllArchiveInputsRecognized
@@ -43,13 +42,12 @@ import androidx.build.studio.StudioTask
 import androidx.build.testConfiguration.addAppApkToTestConfigGeneration
 import androidx.build.testConfiguration.addToModuleInfo
 import androidx.build.testConfiguration.configureTestConfigGeneration
-import androidx.build.transform.configureAarAsJarForConfiguration
 import androidx.build.uptodatedness.TaskUpToDateValidator
 import androidx.build.uptodatedness.cacheEvenIfNoOutputs
 import com.android.build.api.artifact.SingleArtifact
 import com.android.build.api.attributes.BuildTypeAttr
+import com.android.build.api.dsl.AarMetadata
 import com.android.build.api.dsl.ApplicationExtension
-import com.android.build.api.dsl.CommonExtension
 import com.android.build.api.dsl.KotlinMultiplatformAndroidDeviceTestCompilation
 import com.android.build.api.dsl.KotlinMultiplatformAndroidHostTestCompilation
 import com.android.build.api.dsl.KotlinMultiplatformAndroidLibraryTarget
@@ -63,14 +61,16 @@ import com.android.build.api.variant.HasDeviceTests
 import com.android.build.api.variant.HasUnitTestBuilder
 import com.android.build.api.variant.KotlinMultiplatformAndroidComponentsExtension
 import com.android.build.api.variant.LibraryAndroidComponentsExtension
+import com.android.build.api.variant.LibraryVariant
+import com.android.build.api.variant.LibraryVariantBuilder
 import com.android.build.api.variant.Variant
 import com.android.build.gradle.AppPlugin
 import com.android.build.gradle.LibraryPlugin
 import com.android.build.gradle.TestPlugin
 import com.android.build.gradle.api.KotlinMultiplatformAndroidPlugin
 import com.android.build.gradle.api.PrivacySandboxSdkPlugin
-import com.android.build.gradle.tasks.factory.AndroidUnitTest
-import com.android.utils.appendCapitalized
+import com.google.devtools.ksp.gradle.KspExtension
+import com.google.devtools.ksp.gradle.KspGradleSubplugin
 import com.google.protobuf.gradle.ProtobufExtension
 import com.google.protobuf.gradle.ProtobufPlugin
 import java.io.File
@@ -92,7 +92,6 @@ import org.gradle.api.artifacts.ComponentMetadataRule
 import org.gradle.api.artifacts.Configuration
 import org.gradle.api.attributes.Category
 import org.gradle.api.attributes.Usage
-import org.gradle.api.component.SoftwareComponentFactory
 import org.gradle.api.configuration.BuildFeatures
 import org.gradle.api.file.DuplicatesStrategy
 import org.gradle.api.plugins.JavaPlugin
@@ -102,17 +101,14 @@ import org.gradle.api.tasks.Copy
 import org.gradle.api.tasks.TaskProvider
 import org.gradle.api.tasks.bundling.Zip
 import org.gradle.api.tasks.compile.JavaCompile
-import org.gradle.api.tasks.javadoc.Javadoc
 import org.gradle.api.tasks.testing.AbstractTestTask
 import org.gradle.api.tasks.testing.Test
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 import org.gradle.build.event.BuildEventsListenerRegistry
 import org.gradle.jvm.tasks.Jar
-import org.gradle.kotlin.dsl.KotlinClosure1
 import org.gradle.kotlin.dsl.create
 import org.gradle.kotlin.dsl.dependencies
-import org.gradle.kotlin.dsl.extra
 import org.gradle.kotlin.dsl.findByType
 import org.gradle.kotlin.dsl.getByType
 import org.gradle.kotlin.dsl.named
@@ -121,6 +117,7 @@ import org.gradle.kotlin.dsl.withType
 import org.gradle.plugin.devel.plugins.JavaGradlePluginPlugin
 import org.gradle.plugin.devel.tasks.ValidatePlugins
 import org.gradle.process.CommandLineArgumentProvider
+import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
 import org.jetbrains.kotlin.gradle.dsl.ExplicitApiMode
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
@@ -129,7 +126,7 @@ import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
 import org.jetbrains.kotlin.gradle.plugin.KotlinBasePluginWrapper
 import org.jetbrains.kotlin.gradle.plugin.KotlinMultiplatformPluginWrapper
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
-import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinAndroidTarget
+import org.jetbrains.kotlin.gradle.plugin.KotlinSourceSet
 import org.jetbrains.kotlin.gradle.targets.jvm.KotlinJvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
@@ -139,9 +136,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
  * A plugin which enables all of the Gradle customizations for AndroidX. This plugin reacts to other
  * plugins being added and adds required and optional functionality.
  */
-abstract class AndroidXImplPlugin
-@Inject
-constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Project> {
+abstract class AndroidXImplPlugin @Inject constructor() : Plugin<Project> {
     @get:Inject abstract val registry: BuildEventsListenerRegistry
     @get:Inject abstract val buildFeatures: BuildFeatures
 
@@ -153,34 +148,35 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         val androidXKmpExtension =
             project.extensions.create<AndroidXMultiplatformExtension>(
                 AndroidXMultiplatformExtension.EXTENSION_NAME,
-                project
+                project,
             )
 
         project.tasks.register(BUILD_ON_SERVER_TASK, DefaultTask::class.java)
         // Perform different actions based on which plugins have been applied to the project.
         // Many of the actions overlap, ex. API tracking.
         project.plugins.configureEach { plugin ->
-            @Suppress("UnstableApiUsage") // PrivacySandboxSdkPlugin, KMPAndroidPlugin
             when (plugin) {
                 is JavaGradlePluginPlugin -> configureGradlePluginPlugin(project)
                 is JavaPlugin -> configureWithJavaPlugin(project, androidXExtension)
                 is LibraryPlugin -> configureWithLibraryPlugin(project, androidXExtension)
                 is AppPlugin -> configureWithAppPlugin(project, androidXExtension)
                 is TestPlugin -> configureWithTestPlugin(project, androidXExtension)
+                is KspGradleSubplugin -> configureWithKspPlugin(project)
                 is KotlinMultiplatformAndroidPlugin ->
                     configureWithKotlinMultiplatformAndroidPlugin(
                         project,
                         androidXKmpExtension.agpKmpExtension,
-                        androidXExtension
+                        androidXExtension,
                     )
                 is KotlinBasePluginWrapper ->
                     configureWithKotlinPlugin(
                         project,
                         androidXExtension,
                         plugin,
-                        androidXKmpExtension
+                        androidXKmpExtension,
                     )
-                is PrivacySandboxSdkPlugin -> configureWithPrivacySandboxSdkPlugin(project)
+                is @Suppress("UnstableApiUsage") PrivacySandboxSdkPlugin -> // b/397703898
+                configureWithPrivacySandboxSdkPlugin(project)
                 is ProtobufPlugin -> configureProtobufPlugin(project)
             }
         }
@@ -203,23 +199,14 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             configureTestTask(project, task, allHostTests, androidXExtension)
         }
 
-        project.tasks.withType(Test::class.java).configureEach { task ->
-            configureJvmTestTask(project, task)
-        }
-
         project.configureTaskTimeouts()
-        project.configureMavenArtifactUpload(
-            androidXExtension,
-            androidXKmpExtension,
-            componentFactory
-        ) {
+        project.configureMavenArtifactUpload(androidXExtension, androidXKmpExtension) {
             if (buildFeatures.isIsolatedProjectsEnabled()) return@configureMavenArtifactUpload
             project.addCreateLibraryBuildInfoFileTasks(androidXExtension, androidXKmpExtension)
         }
         project.publishInspectionArtifacts()
         project.configureProjectStructureValidation(androidXExtension)
         project.configureProjectVersionValidation(androidXExtension)
-        project.registerProjectOrArtifact()
         project.validateMultiplatformPluginHasNotBeenApplied()
 
         project.tasks.register("printCoordinates", PrintProjectCoordinatesTask::class.java) {
@@ -239,11 +226,12 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             }
             project.registerValidateMultiplatformSourceSetNamingTask()
             project.validateLintVersionTestExists(androidXExtension)
+            project.addTestLintK1Task(androidXExtension)
         }
         project.disallowAccidentalAndroidDependenciesInKmpProject(androidXKmpExtension)
         TaskUpToDateValidator.setup(project, registry)
 
-        project.workaroundPrebuiltTakingPrecedenceOverProject()
+        project.workaroundAndroidXDependencyResolutions()
         project.configureSamplesProject()
         project.configureMaxDepVersions(androidXExtension)
         project.configureUnzipChromeBuildService()
@@ -266,42 +254,9 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 { getHeadShaProvider(project) },
                 { configurationName: String ->
                     configureAarAsJarForConfiguration(project, configurationName)
-                }
+                },
             )
-            .apply {
-                kotlinTarget.set(
-                    if (project.shouldForceKotlin20Target().get()) KotlinTarget.KOTLIN_2_0
-                    else KotlinTarget.DEFAULT
-                )
-            }
-    }
-
-    private fun Project.registerProjectOrArtifact() {
-        // Add a method for each sub project where they can declare an optional
-        // dependency on a project or its latest snapshot artifact.
-        if (!ProjectLayoutType.isPlayground(this)) {
-            // In AndroidX build, this is always enforced to the project
-            extra.set(
-                PROJECT_OR_ARTIFACT_EXT_NAME,
-                KotlinClosure1<String, Project>(
-                    function = {
-                        // this refers to the first parameter of the closure.
-                        project.resolveProject(this)
-                    }
-                )
-            )
-        } else {
-            // In Playground builds, they are converted to the latest SNAPSHOT artifact if the
-            // project is not included in that playground.
-            extra.set(
-                PROJECT_OR_ARTIFACT_EXT_NAME,
-                KotlinClosure1<String, Any>(
-                    function = {
-                        AndroidXPlaygroundRootImplPlugin.projectOrArtifact(rootProject, this)
-                    }
-                )
-            )
-        }
+            .apply { kotlinTarget.set(KotlinTarget.DEFAULT) }
     }
 
     /**
@@ -317,25 +272,6 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         duplicatesStrategy = DuplicatesStrategy.FAIL
     }
 
-    private fun configureJvmTestTask(project: Project, task: Test) {
-        // Robolectric 1.7 increased heap size requirements, see b/207169653.
-        task.maxHeapSize = "3g"
-
-        // For non-playground setup use robolectric offline
-        if (!ProjectLayoutType.isPlayground(project)) {
-            task.systemProperty("robolectric.offline", "true")
-            val robolectricDependencies =
-                File(
-                    project.getPrebuiltsRoot(),
-                    "androidx/external/org/robolectric/android-all-instrumented"
-                )
-            task.systemProperty(
-                "robolectric.dependency.dir",
-                robolectricDependencies.relativeTo(project.projectDir)
-            )
-        }
-    }
-
     private fun configureTestTask(
         project: Project,
         task: AbstractTestTask,
@@ -343,14 +279,6 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         androidXExtension: AndroidXExtension,
     ) {
         anchorTask.configure { it.dependsOn(task) }
-        val ignoreFailuresProperty =
-            project.providers.gradleProperty(TEST_FAILURES_DO_NOT_FAIL_TEST_TASK)
-        val ignoreFailures = ignoreFailuresProperty.isPresent
-        if (ignoreFailures) {
-            task.ignoreFailures = true
-        }
-        task.inputs.property("ignoreFailures", ignoreFailures)
-
         val xmlReportDestDir = project.getHostTestResultDirectory()
         val testName = "${project.path}:${task.name}"
         project.addToModuleInfo(testName, buildFeatures.isIsolatedProjectsEnabled())
@@ -384,7 +312,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 val zipXmlTask =
                     project.tasks.register(
                         "zipXmlResultsOf$capitalizedTestTaskName",
-                        Zip::class.java
+                        Zip::class.java,
                     ) {
                         it.destinationDirectory.set(xmlReportDestDir)
                         it.archiveFileName.set(archiveName)
@@ -438,7 +366,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             if (evaluatedProject.androidXExtension.shouldPublish()) {
                 tasks.register(
                     CheckKotlinApiTargetTask.TASK_NAME,
-                    CheckKotlinApiTargetTask::class.java
+                    CheckKotlinApiTargetTask::class.java,
                 ) {
                     it.kotlinTarget.set(kotlinVersionProvider)
                     it.outputFile.set(layout.buildDirectory.file("kotlinApiTargetCheckReport.txt"))
@@ -481,14 +409,13 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project: Project,
         androidXExtension: AndroidXExtension,
         plugin: KotlinBasePluginWrapper,
-        androidXMultiplatformExtension: AndroidXMultiplatformExtension
+        androidXMultiplatformExtension: AndroidXMultiplatformExtension,
     ) {
         val targetsAndroid =
             project.provider {
                 project.plugins.hasPlugin(LibraryPlugin::class.java) ||
                     project.plugins.hasPlugin(AppPlugin::class.java) ||
                     project.plugins.hasPlugin(TestPlugin::class.java) ||
-                    @Suppress("UnstableApiUsage")
                     project.plugins.hasPlugin(KotlinMultiplatformAndroidPlugin::class.java)
             }
         val defaultJavaTargetVersion =
@@ -498,26 +425,26 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         val defaultJvmTarget = defaultJavaTargetVersion.map { JvmTarget.fromTarget(it) }
         if (plugin is KotlinMultiplatformPluginWrapper) {
             project.extensions.getByType<KotlinMultiplatformExtension>().apply {
-                targets.withType<KotlinAndroidTarget> {
-                    compilations.configureEach {
-                        it.compileTaskProvider.configure { task ->
-                            task.compilerOptions.jvmTarget.set(defaultJvmTarget)
+                targets.withType<KotlinMultiplatformAndroidLibraryTarget>().configureEach { t ->
+                    t.compilations.configureEach { compilation ->
+                        compilation.compileTaskProvider.configure {
+                            it.compilerOptions.jvmTarget.set(defaultJvmTarget)
                         }
                     }
                 }
-                targets.withType<KotlinJvmTarget> {
+                targets.withType(KotlinJvmTarget::class.java).configureEach { target ->
                     val defaultTargetVersionForNonAndroidTargets =
                         project.provider {
                             getDefaultTargetJavaVersion(
                                     softwareType = androidXExtension.type,
                                     projectName = project.name,
-                                    targetName = name
+                                    targetName = target.name,
                                 )
                                 .toString()
                         }
                     val defaultJvmTargetForNonAndroidTargets =
                         defaultTargetVersionForNonAndroidTargets.map { JvmTarget.fromTarget(it) }
-                    compilations.configureEach { compilation ->
+                    target.compilations.configureEach { compilation ->
                         compilation.compileJavaTaskProvider?.configure { javaCompile ->
                             javaCompile.targetCompatibility =
                                 defaultTargetVersionForNonAndroidTargets.get()
@@ -576,7 +503,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                             listOf(
                                 "-Xno-param-assertions",
                                 "-Xno-call-assertions",
-                                "-Xno-receiver-assertions"
+                                "-Xno-receiver-assertions",
                             )
                     }
 
@@ -605,7 +532,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             // Disable any source JAR task(s) added by KotlinMultiplatformPlugin.
             // https://youtrack.jetbrains.com/issue/KT-55881
             project.tasks.withType(Jar::class.java).configureEach { jarTask ->
-                if (jarTask.name == "jvmSourcesJar") {
+                if (jarTask.name == "androidSourcesJar" || jarTask.name == "jvmSourcesJar") {
                     // We can't set duplicatesStrategy directly on the Jar task since it will get
                     // overridden when the KotlinMultiplatformPlugin creates child specs, but we
                     // can set it on a per-file basis.
@@ -658,10 +585,9 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 
         project.configureJavaCompilationWarnings(
             androidXExtension = androidXExtension,
-            isTestApp = true
+            isTestApp = true,
         )
         project.buildOnServerDependsOnAssembleRelease()
-        project.buildOnServerDependsOnLint()
     }
 
     private fun configureWithTestPlugin(project: Project, androidXExtension: AndroidXExtension) {
@@ -675,10 +601,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // Sign all the builds (including release) with debug key
                 buildType.signingConfig = debugSigningConfig
             }
-            project.configureTestConfigGeneration(
-                this,
-                androidXExtension.isIsolatedProjectsEnabled()
-            )
+            project.configureTestConfigGeneration(androidXExtension.isIsolatedProjectsEnabled())
             project.addAppApkToTestConfigGeneration(androidXExtension)
             excludeVersionFiles(packaging.resources)
         }
@@ -689,47 +612,115 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.configureJavaCompilationWarnings(androidXExtension)
     }
 
+    private fun configureWithKspPlugin(project: Project) =
+        project.extensions.getByType<KspExtension>().useKsp2.set(true)
+
+    private fun configureCommonAndroidLibrary(
+        project: Project,
+        androidXExtension: AndroidXExtension,
+        androidComponents:
+            AndroidComponentsExtension<*, out LibraryVariantBuilder, out LibraryVariant>,
+    ) {
+        androidComponents.onVariants { variant ->
+            variant.configureTests()
+            variant.enableMicrobenchmarkInternalDefaults(project)
+            project.validateKotlinModuleFiles(
+                variant.name,
+                variant.artifacts.get(SingleArtifact.AAR),
+            )
+        }
+
+        project.disableStrictVersionConstraints()
+        project.configureJavaCompilationWarnings(androidXExtension)
+        project.setUpCheckDocsTask(androidXExtension)
+        project.enforceDeviceTestsForMultiplatform()
+    }
+
+    // Sets up android instrumented tests and includes common tests regardless of if they have
+    // been explicitly configured.
+    @OptIn(ExperimentalKotlinGradlePluginApi::class)
+    private fun Project.enforceDeviceTestsForMultiplatform() {
+        project.multiplatformExtension?.let {
+            val commonTestSourceSet = it.sourceSets.getByName("commonTest")
+            val androidInstrumentedTestSourceSet =
+                it.sourceSets.getByName("androidInstrumentedTest")
+            val commonTestFilesExist = commonTestSourceSet.kotlin.files.isNotEmpty()
+            if (commonTestFilesExist) {
+                androidInstrumentedTestSourceSet.dependsOn(commonTestSourceSet)
+                androidInstrumentedTestSourceSet.dependencies {
+                    implementation(getLibraryByName("testRunner"))
+                }
+            }
+        }
+    }
+
+    private fun KotlinSourceSet.includesSourceSet(otherName: String): Boolean =
+        name == otherName || dependsOn.any { it.includesSourceSet(otherName) }
+
+    private fun AarMetadata.configure(compileSdk: Int?) {
+        // Taken from
+        // https://developer.android.com/build/releases/gradle-plugin#api-level-support
+        fun mapToMinAgpVersion(compileSdk: Int): String {
+            return when (compileSdk) {
+                34 -> "8.1.1"
+                35 -> "8.6.0"
+                36 -> "8.9.1"
+                else -> throw Exception("Unknown compileSdk to minAgpVersion mapping")
+            }
+        }
+
+        // Propagate the compileSdk value into minCompileSdk. Don't propagate
+        // compileSdkExtension, since only one library actually depends on the extension
+        // APIs and they can explicitly declare that in their build.gradle. Note that when
+        // we're using a preview SDK, the value for compileSdk will be null and the
+        // resulting AAR metadata won't have a minCompileSdk --
+        // this is okay because AGP automatically embeds forceCompileSdkPreview in the AAR
+        // metadata and uses it instead of minCompileSdk.
+        if (compileSdk == null) return
+        minCompileSdk = compileSdk
+        minAgpVersion = mapToMinAgpVersion(compileSdk)
+    }
+
     private fun configureWithKotlinMultiplatformAndroidPlugin(
         project: Project,
         kotlinMultiplatformAndroidTarget: KotlinMultiplatformAndroidLibraryTarget,
-        androidXExtension: AndroidXExtension
+        androidXExtension: AndroidXExtension,
     ) {
         val kotlinMultiplatformAndroidComponentsExtension =
             project.extensions.getByType<KotlinMultiplatformAndroidComponentsExtension>()
         kotlinMultiplatformAndroidTarget.configureAndroidBaseOptions(
             project,
-            kotlinMultiplatformAndroidComponentsExtension
+            kotlinMultiplatformAndroidComponentsExtension,
+        )
+        configureCommonAndroidLibrary(
+            project,
+            androidXExtension,
+            kotlinMultiplatformAndroidComponentsExtension,
         )
         kotlinMultiplatformAndroidComponentsExtension.apply {
             finalizeDsl {
-                // Propagate the compileSdk value into minCompileSdk. Must be done after the DSL in
-                // build.gradle files (that sets compileSdk in the first place) is evaluated.
-
-                kotlinMultiplatformAndroidTarget.aarMetadata.minCompileSdk =
-                    kotlinMultiplatformAndroidTarget.compileSdk
-
+                it.aarMetadata.configure(it.compileSdk)
+                it.lint.targetSdk = project.defaultAndroidConfig.targetSdk
                 project.setUpBlankProguardFileForKmpAarIfNeeded(
                     kotlinMultiplatformAndroidTarget.optimization.consumerKeepRules
                 )
             }
         }
-        project.disableStrictVersionConstraints()
 
-        project.configureProjectForApiTasks(AndroidMultiplatformApiTaskConfig, androidXExtension)
-        project.configureProjectForKzipTasks(AndroidMultiplatformApiTaskConfig, androidXExtension)
-
-        kotlinMultiplatformAndroidComponentsExtension.onVariant { it.configureTests() }
-
-        project.configurePublicResourcesStub(project.multiplatformExtension!!)
-        kotlinMultiplatformAndroidComponentsExtension.onVariant { variant ->
-            project.configureMultiplatformSourcesForAndroid(
-                variant.name,
-                kotlinMultiplatformAndroidTarget,
-                androidXExtension.samplesProjects
+        kotlinMultiplatformAndroidComponentsExtension.onVariants { variant ->
+            project.configureProjectForApiTasks(
+                AndroidMultiplatformApiTaskConfig(variant),
+                androidXExtension,
             )
+            project.configureProjectForKzipTasks(
+                AndroidMultiplatformApiTaskConfig(variant),
+                androidXExtension,
+            )
+            project.configurePublicResourcesStub(variant)
+            project.configureMultiplatformSourcesForAndroid(androidXExtension.samplesProjects)
         }
+
         project.configureVersionFileWriter(project.multiplatformExtension!!, androidXExtension)
-        project.configureJavaCompilationWarnings(androidXExtension)
 
         project.configureDependencyVerification(androidXExtension) { taskProvider ->
             kotlinMultiplatformAndroidTarget.compilations.configureEach {
@@ -740,55 +731,23 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             project.addToBuildOnServer("assembleAndroidMain")
             project.addToBuildOnServer("lint")
             // Created to be consumed by docs-tip-of-tree
-            project.configurations.create("androidIntermediates") {
+            project.configurations.register("androidIntermediates") {
                 it.isVisible = false
                 it.isCanBeResolved = false
                 it.attributes.attribute(
                     Usage.USAGE_ATTRIBUTE,
-                    project.objects.named(Usage.JAVA_RUNTIME)
+                    project.objects.named(Usage.JAVA_RUNTIME),
                 )
                 it.attributes.attribute(
                     Category.CATEGORY_ATTRIBUTE,
-                    project.objects.named<Category>(Category.LIBRARY)
+                    project.objects.named<Category>(Category.LIBRARY),
                 )
                 it.attributes.attribute(
                     BuildTypeAttr.ATTRIBUTE,
-                    project.objects.named<BuildTypeAttr>("release")
+                    project.objects.named<BuildTypeAttr>("release"),
                 )
                 it.outgoing.artifact(project.tasks.named("createFullJarAndroidMain"))
             }
-        }
-        project.setUpCheckDocsTask(androidXExtension)
-        project.writeBlankPublicTxtToAar(kotlinMultiplatformAndroidComponentsExtension)
-        kotlinMultiplatformAndroidComponentsExtension.onVariant {
-            project.validateKotlinModuleFiles(it.name, it.artifacts.get(SingleArtifact.AAR))
-        }
-    }
-
-    private fun Project.writeBlankPublicTxtToAar(
-        componentsExtension: KotlinMultiplatformAndroidComponentsExtension
-    ) {
-        val blankPublicResourceDir =
-            project.getSupportRootFolder().resolve("buildSrc/blank-res-api")
-        componentsExtension.onVariant { variant ->
-            val taskProvider =
-                tasks.register(
-                    "repackageAarWithResourceApi".appendCapitalized(variant.name),
-                    RepackagingTask::class.java
-                ) { task ->
-                    task.from(blankPublicResourceDir)
-                    task.from(zipTree(task.aarFile))
-                    task.destinationDirectory.fileProvider(
-                        task.output.locationOnly.map { location -> location.asFile.parentFile }
-                    )
-                    task.archiveFileName.set(
-                        task.output.locationOnly.map { location -> location.asFile.name }
-                    )
-                }
-            variant.artifacts
-                .use(taskProvider)
-                .wiredWithFiles(RepackagingTask::aarFile, RepackagingTask::output)
-                .toTransform(SingleArtifact.AAR)
         }
     }
 
@@ -813,16 +772,32 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         }
     }
 
-    @Suppress("UnstableApiUsage") // usage of PrivacySandboxSdkExtension
+    @Suppress("UnstableApiUsage") // usage of PrivacySandboxSdkExtension b/397703898
     private fun configureWithPrivacySandboxSdkPlugin(project: Project) {
+        project.tasks.register("check")
         project.extensions.getByType<PrivacySandboxSdkExtension>().apply {
             configureLocalAsbSigning(experimentalProperties, project.getKeystore())
+            compileSdk = project.defaultAndroidConfig.compileSdk
+            minSdk = project.defaultAndroidConfig.minSdk
+            buildToolsVersion = project.defaultAndroidConfig.buildToolsVersion
+            bundle { setVersion(1, 0, 0) }
+        }
+        // Workaround for b/389890488
+        project.configurations.configureEach { configuration ->
+            if (configuration.isCanBeResolved) {
+                configuration.attributes { attributeContainer ->
+                    attributeContainer.attribute(
+                        BuildTypeAttr.ATTRIBUTE,
+                        project.objects.named(BuildTypeAttr::class.java, "release"),
+                    )
+                }
+            }
         }
     }
 
     private fun configureLocalAsbSigning(
         experimentalProperties: MutableMap<String, Any>,
-        keyStore: File
+        keyStore: File,
     ) {
         experimentalProperties[ASB_SIGNING_CONFIG_PROPERTY_NAME] = keyStore.absolutePath
     }
@@ -850,13 +825,6 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.addToBuildOnServer("assembleRelease")
     }
 
-    private fun Project.buildOnServerDependsOnLint() {
-        if (!project.usingMaxDepVersions().get()) {
-            project.addToBuildOnServer("lint")
-        }
-    }
-
-    @Suppress("UnstableApiUsage") // HasDeviceTests is @Incubating b/372495504
     private fun HasDeviceTests.configureTests() {
         deviceTests.forEach { (_, deviceTest) ->
             deviceTest.packaging.resources.apply {
@@ -881,14 +849,15 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         }
     }
 
-    @Suppress("UnstableApiUsage") // usage of experimentalProperties
+    @Suppress("UnstableApiUsage") // usage of experimentalProperties b/397703898
     private fun Variant.configureLocalAsbSigning(keyStore: File) {
         experimentalProperties.put(ASB_SIGNING_CONFIG_PROPERTY_NAME, keyStore.absolutePath)
     }
 
     private fun configureWithLibraryPlugin(project: Project, androidXExtension: AndroidXExtension) {
         val buildTypeForTests = "release"
-        project.extensions.getByType<LibraryExtension>().apply {
+        val libraryExtension = project.extensions.getByType<LibraryExtension>()
+        libraryExtension.apply {
             publishing { singleVariant(DEFAULT_PUBLISH_CONFIG) }
 
             configureAndroidBaseOptions(project, androidXExtension)
@@ -900,26 +869,17 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 buildType.signingConfig = debugSigningConfig
             }
             testBuildType = buildTypeForTests
-            project.configureTestConfigGeneration(
-                this,
-                androidXExtension.isIsolatedProjectsEnabled()
-            )
+            project.configureTestConfigGeneration(androidXExtension.isIsolatedProjectsEnabled())
             project.addAppApkToTestConfigGeneration(androidXExtension)
         }
 
         val libraryAndroidComponentsExtension =
             project.extensions.getByType<LibraryAndroidComponentsExtension>()
+        configureCommonAndroidLibrary(project, androidXExtension, libraryAndroidComponentsExtension)
 
         libraryAndroidComponentsExtension.apply {
             finalizeDsl {
-                // Propagate the compileSdk value into minCompileSdk. Don't propagate
-                // compileSdkExtension, since only one library actually depends on the extension
-                // APIs and they can explicitly declare that in their build.gradle. Note that when
-                // we're using a preview SDK, the value for compileSdk will be null and the
-                // resulting AAR metadata won't have a minCompileSdk --
-                // this is okay because AGP automatically embeds forceCompileSdkPreview in the AAR
-                // metadata and uses it instead of minCompileSdk.
-                it.defaultConfig.aarMetadata.minCompileSdk = it.compileSdk
+                it.defaultConfig.aarMetadata.configure(it.compileSdk)
                 it.lint.targetSdk = project.defaultAndroidConfig.targetSdk
                 it.testOptions.targetSdk = project.defaultAndroidConfig.targetSdk
                 // Replace with a public API once available, see b/360392255
@@ -929,55 +889,36 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                     project.setUpBlankProguardFileForAarIfNeeded(buildType)
                 }
             }
+            // Disable debug build type for Android Libraries
             beforeVariants(selector().withBuildType("debug")) { variant -> variant.enable = false }
-            beforeVariants(selector().all()) { variant ->
-                variant.androidTest.targetSdk = project.defaultAndroidConfig.targetSdk
-            }
-            onVariants { variant ->
-                variant.configureTests()
-                variant.enableMicrobenchmarkInternalDefaults(project)
-                project.validateKotlinModuleFiles(
-                    variant.name,
-                    variant.artifacts.get(SingleArtifact.AAR)
-                )
-            }
         }
 
-        project.disableStrictVersionConstraints()
         project.configureVersionFileWriter(libraryAndroidComponentsExtension, androidXExtension)
-        project.configureJavaCompilationWarnings(androidXExtension)
 
         val prebuiltLibraries = listOf("libtracing_perfetto.so", "libc++_shared.so")
-        val copyPublicResourcesDirTask =
-            project.tasks.register(
-                "generatePublicResourcesStub",
-                CopyPublicResourcesDirTask::class.java
-            ) { task ->
-                task.buildSrcResDir.set(File(project.getSupportRootFolder(), "buildSrc/res"))
-            }
         libraryAndroidComponentsExtension.onVariants { variant ->
             if (variant.buildType == DEFAULT_PUBLISH_CONFIG) {
                 // Standard docs, resource API, and Metalava configuration for AndroidX projects.
                 project.configureProjectForApiTasks(
                     LibraryApiTaskConfig(variant),
-                    androidXExtension
+                    androidXExtension,
                 )
                 project.configureProjectForKzipTasks(
                     LibraryApiTaskConfig(variant),
-                    androidXExtension
+                    androidXExtension,
                 )
             }
             if (variant.name == DEFAULT_PUBLISH_CONFIG) {
                 project.configureSourceJarForAndroid(variant, androidXExtension.samplesProjects)
+                project.configurePublicResourcesStub(variant)
                 project.configureDependencyVerification(androidXExtension) { taskProvider ->
                     taskProvider.configure { task -> task.dependsOn("compileReleaseJavaWithJavac") }
                 }
             }
-            configurePublicResourcesStub(variant, copyPublicResourcesDirTask)
             val verifyELFRegionAlignmentTaskProvider =
                 project.tasks.register(
                     variant.name + "VerifyELFRegionAlignment",
-                    VerifyELFRegionAlignmentTask::class.java
+                    VerifyELFRegionAlignmentTask::class.java,
                 ) { task ->
                     task.files.from(
                         variant.artifacts.get(SingleArtifact.MERGED_NATIVE_LIBS).map { dir ->
@@ -991,11 +932,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 }
             project.addToBuildOnServer(verifyELFRegionAlignmentTaskProvider)
         }
-
-        project.setUpCheckDocsTask(androidXExtension)
-
         project.buildOnServerDependsOnAssembleRelease()
-        project.buildOnServerDependsOnLint()
     }
 
     private fun configureGradlePluginPlugin(project: Project) {
@@ -1033,7 +970,6 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.setUpBlankProguardFileForJarIfNeeded(javaExtension)
         project.configureJavaCompilationWarnings(androidXExtension)
 
-        project.hideJavadocTask()
         if (
             project.multiplatformExtension == null ||
                 project.multiplatformExtension!!.hasJavaEnabled()
@@ -1090,10 +1026,16 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         afterEvaluate { androidXExtension.validateMavenVersion() }
     }
 
-    private fun CommonExtension<*, *, *, *, *, *>.configureAndroidBaseOptions(
+    private fun Any.configureAndroidBaseOptions(
         project: Project,
-        androidXExtension: AndroidXExtension
+        androidXExtension: AndroidXExtension,
     ) {
+        // Workaround to avoid specifying the parametrized types of CommonExtension explicitly
+        // So we can clean up the parameters in AGP
+        // The compiler can infer that this is CommonExtension from these checks
+        if (this !is ApplicationExtension && this !is LibraryExtension && this !is TestExtension) {
+            throw IllegalArgumentException("Unexpected extension: $this")
+        }
         compileOptions.apply {
             sourceCompatibility = VERSION_1_8
             targetCompatibility = VERSION_1_8
@@ -1114,13 +1056,15 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         defaultConfig.testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
         testOptions.animationsDisabled = !project.isMacrobenchmark()
-        testOptions.unitTests.isReturnDefaultValues = true
-        testOptions.unitTests.all { task -> task.configureForRobolectric() }
-
-        // Include resources in Robolectric tests as a workaround for b/184641296
-        testOptions.unitTests.isIncludeAndroidResources = true
 
         project.afterEvaluate {
+            check(
+                !androidXExtension.shouldPublish() || !compileOptions.isCoreLibraryDesugaringEnabled
+            ) {
+                "AndroidX libraries are not permitted to use core library desugaring as it " +
+                    "forces library users to also enable core library desugaring."
+            }
+
             val minSdkVersion = defaultConfig.minSdk!!
             check(minSdkVersion >= defaultMinSdk) {
                 "minSdkVersion $minSdkVersion lower than the default of $defaultMinSdk"
@@ -1172,7 +1116,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 
     private fun KotlinMultiplatformAndroidLibraryTarget.configureAndroidBaseOptions(
         project: Project,
-        componentsExtension: KotlinMultiplatformAndroidComponentsExtension
+        componentsExtension: KotlinMultiplatformAndroidComponentsExtension,
     ) {
         val defaultMinSdkVersion = project.defaultAndroidConfig.minSdk
         val defaultCompileSdk = project.defaultAndroidConfig.compileSdk
@@ -1189,17 +1133,22 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 it.instrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
                 it.animationsDisabled = true
             }
-        compilations
-            .withType(KotlinMultiplatformAndroidHostTestCompilation::class.java)
-            .configureEach {
-                it.isReturnDefaultValues = true
-                // Include resources in Robolectric tests as a workaround for b/184641296
-                it.isIncludeAndroidResources = true
-            }
 
-        project.tasks.withType(AndroidUnitTest::class.java).configureEach { task ->
-            task.configureForRobolectric()
+        @Suppress("UnstableApiUsage") // usage of withHostTestBuilder
+        withHostTestBuilder {
+            @Suppress("DEPRECATION")
+            defaultSourceSetName = "androidUnitTest"
         }
+
+        @Suppress("UnstableApiUsage") // usage of withDeviceTestBuilder
+        withDeviceTestBuilder {
+            @Suppress("DEPRECATION")
+            compilationName = "instrumentedTest"
+            @Suppress("DEPRECATION")
+            defaultSourceSetName = "androidInstrumentedTest"
+            sourceSetTreeName = "test"
+        }
+        configureTargetSdkForTests(project.defaultAndroidConfig.targetSdk)
 
         // validate that SDK versions haven't been altered during evaluation
         project.afterEvaluate {
@@ -1213,12 +1162,22 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             project.enforceBanOnVersionRanges()
         }
 
-        project.configureTestConfigGeneration(
-            this,
-            componentsExtension,
-            buildFeatures.isIsolatedProjectsEnabled()
-        )
+        project.configureTestConfigGeneration(buildFeatures.isIsolatedProjectsEnabled())
         project.configureFtlRunner(componentsExtension)
+    }
+
+    // TODO(b/425976012): Set targetSdkForTests to project.defaultAndroidConfig.targetSdk
+    private fun KotlinMultiplatformAndroidLibraryTarget.configureTargetSdkForTests(version: Int?) {
+        checkNotNull(version) {
+            "version must be set for tests. call `configureTargetSdkForTests` in the `finalizeDsl` block"
+        }
+        compilations
+            .withType(KotlinMultiplatformAndroidDeviceTestCompilation::class.java)
+            .configureEach { it.targetSdk { this.version = release(version) } }
+
+        compilations
+            .withType(KotlinMultiplatformAndroidHostTestCompilation::class.java)
+            .configureEach { it.targetSdk { this.version = release(version.coerceAtMost(35)) } }
     }
 
     /**
@@ -1304,21 +1263,21 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 
     private fun ApplicationExtension.configureAndroidApplicationOptions(
         project: Project,
-        androidXExtension: AndroidXExtension
+        androidXExtension: AndroidXExtension,
     ) {
         defaultConfig.apply {
             versionCode = 1
             versionName = "1.0"
         }
 
-        project.configureTestConfigGeneration(this, androidXExtension.isIsolatedProjectsEnabled())
+        project.configureTestConfigGeneration(androidXExtension.isIsolatedProjectsEnabled())
         project.addAppApkToTestConfigGeneration(androidXExtension)
         project.addAppApkToFtlRunner()
     }
 
     private fun Project.configureDependencyVerification(
         androidXExtension: AndroidXExtension,
-        taskConfigurator: (TaskProvider<VerifyDependencyVersionsTask>) -> Unit
+        taskConfigurator: (TaskProvider<VerifyDependencyVersionsTask>) -> Unit,
     ) {
         if (buildFeatures.isIsolatedProjectsEnabled()) return
         afterEvaluate {
@@ -1385,7 +1344,15 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // We only emit constraints referring to projects that will release
                 val otherFilepath =
                     getSupportRootFolder().resolve(File(otherProject.filePath, "build.gradle"))
-                val parsed = parseBuildFile(otherFilepath)
+                val parsed =
+                    if (otherFilepath.exists()) {
+                        parseBuildFile(otherFilepath)
+                    } else {
+                        parseBuildFile(
+                            getSupportRootFolder()
+                                .resolve(File(otherProject.filePath, "build.gradle.kts"))
+                        )
+                    }
                 if (!parsed.shouldRelease()) {
                     continue
                 }
@@ -1473,7 +1440,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 internal fun getDefaultTargetJavaVersion(
     softwareType: SoftwareType,
     projectName: String? = null,
-    targetName: String? = null
+    targetName: String? = null,
 ): JavaVersion {
     return when {
         // TODO(b/353328300): Move room-compiler-processing to Java 17 once Dagger is ready.
@@ -1483,6 +1450,34 @@ internal fun getDefaultTargetJavaVersion(
         softwareType.compilationTarget == CompilationTarget.HOST -> VERSION_17
         else -> VERSION_1_8
     }
+}
+
+/** Must be called from a `project.afterEvaluate` block. */
+private fun Project.addTestLintK1Task(androidXExt: AndroidXExtension) {
+    if (!androidXExt.type.isLint()) {
+        return
+    }
+
+    // Make the default ":test" task use lint.use.fir.uast=true, which forces Lint tests to run
+    // using K2.
+    project.tasks.withType<Test>().named("test") { task ->
+        task.systemProperty("lint.use.fir.uast", "true")
+    }
+
+    // Add an additional test task, ":testLintK1", to run Lint tests using K1.
+    //
+    // This task is automatically included in allHostTests and configured (by JavaBasePlugin to run
+    // the Kotlin/Java tests) just by being of type `Test`; no additional code is needed, and the
+    // order (of when we register this task vs., say, allHostTests) does not matter.
+    //
+    // All AndroidX libraries target the Kotlin 2.0 language version, so AndroidX lint checks
+    // invoked via AGP will use K2. However, K1 may still be used: (a) When Lint runs in Android
+    // Studio and IntelliJ, the user can choose K1/K2 mode. (b) The developer can force AGP Lint to
+    // run via K1 for specific modules, which they might do if there are problems with K2.
+    project.tasks.register("testLintK1", Test::class.java).configure { task ->
+        task.systemProperty("lint.use.fir.uast", "false")
+    }
+    project.tasks.named("check") { task -> task.dependsOn("testLintK1") }
 }
 
 private fun Project.validateLintVersionTestExists(androidXExtension: AndroidXExtension) {
@@ -1507,25 +1502,9 @@ private fun Configuration.isTest(): Boolean = name.lowercase().contains("test")
 internal fun Configuration.isPublished(): Boolean =
     !isTest() && !name.lowercase().contains("metadata") && !name.endsWith("CInterop")
 
-/**
- * Hides a project's Javadoc tasks from the output of `./gradlew tasks` by setting their group to
- * `null`.
- *
- * AndroidX projects do not use the Javadoc task for docs generation, so we don't want them
- * cluttering up the task overview.
- */
-private fun Project.hideJavadocTask() {
-    tasks.withType(Javadoc::class.java).configureEach {
-        if (it.name == "javadoc") {
-            it.group = null
-        }
-    }
-}
-
-val Project.androidExtension: AndroidComponentsExtension<*, *, *>
+internal val Project.androidExtension: AndroidComponentsExtension<*, *, *>
     get() =
-        extensions.findByType<LibraryAndroidComponentsExtension>()
-            ?: extensions.findByType<ApplicationAndroidComponentsExtension>()
+        extensions.findByType<KotlinMultiplatformAndroidComponentsExtension>()
             ?: throw IllegalArgumentException("Failed to find any registered Android extension")
 
 val Project.multiplatformExtension
@@ -1547,7 +1526,7 @@ internal fun Project.configureTaskTimeouts() {
         setOf(
             ":compose:ui:ui:compileReleaseAndroidTestKotlinAndroid",
             ":compose:foundation:foundation:compileReleaseAndroidTestKotlinAndroid",
-            ":compose:foundation:foundation:integration-tests:lazy-tests:compileReleaseAndroidTestKotlin"
+            ":compose:foundation:foundation:integration-tests:lazy-tests:compileReleaseAndroidTestKotlin",
         )
     tasks.configureEach { t ->
         // skip adding a timeout for some tasks that both take a long time and
@@ -1589,7 +1568,7 @@ private fun Project.configureJavaCompilationWarnings(
             JavaCompileArgumentProvider(
                 isTestApp = isTestApp,
                 failOnDeprecationWarnings = androidXExtension.failOnDeprecationWarnings,
-                usingMaxDepVersions = usingMaxDepVersions()
+                usingMaxDepVersions = usingMaxDepVersions(),
             )
         )
     }
@@ -1698,10 +1677,21 @@ fun AndroidXExtension.validateMavenVersion() {
     }
 }
 
-/** Workaround for https://github.com/gradle/gradle/issues/27407 */
-fun Project.workaroundPrebuiltTakingPrecedenceOverProject() {
+/** Workarounds for configuration resolution */
+fun Project.workaroundAndroidXDependencyResolutions() {
     project.configurations.configureEach { configuration ->
+        // https://github.com/gradle/gradle/issues/27407
         configuration.resolutionStrategy.preferProjectModules()
+
+        // https://github.com/gradle/gradle/issues/7594
+        configuration.resolutionStrategy.eachDependency { dependency ->
+            if (dependency.requested.group.startsWith("androidx.")) {
+                // Drop aar classifier that comes from <type>aar</type> in POM files
+                // as it causes a bug in Gradle. Gradle does not actually need the
+                // classifiers for Android libraries for them to work correctly.
+                dependency.artifactSelection { it.withoutArtifactSelectors() }
+            }
+        }
     }
 }
 
@@ -1713,18 +1703,6 @@ private fun Project.configureUnzipChromeBuildService() {
         it.parameters.browserDir.set(File(getPrebuiltsRoot(), "androidx/chrome-for-testing/"))
         it.parameters.unzipToDir.set(getOutDirectory().resolve("chrome-bin"))
     }
-}
-
-private fun Test.configureForRobolectric() {
-    // https://github.com/robolectric/robolectric/issues/7456
-    jvmArgs =
-        listOf(
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/java.util=ALL-UNNAMED",
-            "--add-opens=java.base/java.io=ALL-UNNAMED",
-        )
-    // Robolectric 1.7 increased heap size requirements, see b/207169653.
-    maxHeapSize = "3g"
 }
 
 private fun Project.enforceBanOnVersionRanges() {
@@ -1756,6 +1734,7 @@ internal fun Project.hasAndroidMultiplatformPlugin(): Boolean =
     extensions.findByType(AndroidXMultiplatformExtension::class.java)?.hasAndroidMultiplatform()
         ?: false
 
+@Suppress("DEPRECATION")
 internal fun KotlinMultiplatformExtension.hasJavaEnabled(): Boolean =
     targets.withType(KotlinJvmTarget::class.java).singleOrNull()?.withJavaEnabled ?: false
 
@@ -1765,5 +1744,3 @@ internal fun KotlinMultiplatformExtension.hasJvmTarget(): Boolean =
 internal fun String.camelCase() = replaceFirstChar {
     if (it.isLowerCase()) it.titlecase() else it.toString()
 }
-
-const val PROJECT_OR_ARTIFACT_EXT_NAME = "projectOrArtifact"
